Swagger executando e banco automatico

--- a/AuthApex/src/AuthApex.Infrastructure/AuthApex.Infrastructure.csproj
+++ b/AuthApex/src/AuthApex.Infrastructure/AuthApex.Infrastructure.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\AuthApex.Application\AuthApex.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Configurations\" />
+  </ItemGroup>
+
 </Project>
