--- a/AuthApex/src/AuthApex.WebApi/appsettings.Development.json
+++ b/AuthApex/src/AuthApex.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AuthApexDb": "Server=(localdb)\\mssqllocaldb;Database=AuthApexDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApexDb": "Server=(localdb)\\MSSQLLocalDB;Database=ApexDb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
