--- a/TransportApex/src/TransportApex.WebApi/TransportApex.WebApi.csproj
+++ b/TransportApex/src/TransportApex.WebApi/TransportApex.WebApi.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\TransportApex.Infrastructure\TransportApex.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Endpoints\" />
+  </ItemGroup>
+
 </Project>
