--- a/TransportApex/src/TransportApex.WebApi/appsettings.Development.json
+++ b/TransportApex/src/TransportApex.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TransportApexDb": "Server=(localdb)\\mssqllocaldb;Database=TransportApexDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApexDb": "Server=(localdb)\\mssqllocaldb;Database=ApexDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
