--- a/AuthApex/src/AuthApex.Domain/AuthApex.Domain.csproj
+++ b/AuthApex/src/AuthApex.Domain/AuthApex.Domain.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="MediatR" Version="13.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Events\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
