--- a/AuthApex/src/AuthApex.WebApi/AuthApex.WebApi.csproj
+++ b/AuthApex/src/AuthApex.WebApi/AuthApex.WebApi.csproj
@@ -18,16 +18,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="9.0.10" />
-    <PackageReference Include="NSwag.AspNetCore" Version="14.6.1" />
-    <PackageReference Include="NSwag.MSBuild" Version="14.6.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AuthApex.Application\AuthApex.Application.csproj" />
     <ProjectReference Include="..\AuthApex.Infrastructure\AuthApex.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
