--- a/AuthApex/src/AuthApex.WebApi/Properties/launchSettings.json
+++ b/AuthApex/src/AuthApex.WebApi/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "AuthApex.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -19,6 +20,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
