--- a/TransportApex/src/TransportApex.Application/TransportApex.Application.csproj
+++ b/TransportApex/src/TransportApex.Application/TransportApex.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\TransportApex.Domain\TransportApex.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="WeatherForecasts\Queries\" />
+  </ItemGroup>
+
 </Project>
