Fim do desenvolvimento do primeiro micro serviço - API Auth

--- a/AuthApex/src/AuthApex.WebApi/appsettings.json
+++ b/AuthApex/src/AuthApex.WebApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "ApexDb": "Server=(localdb)\\MSSQLLocalDB;Database=ApexDb;Trusted_Connection=True;"
+  },
+  "JwtSettings": {
+    "SecretKey": "vEiRo8MjEZ6cJDr3NoazQslwBnNdbspqes3MG6gkZec="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
