Token Jwt e proteção das rotas concluidos.

--- a/AuthApex/src/AuthApex.WebApi/appsettings.Development.json
+++ b/AuthApex/src/AuthApex.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApexDb": "Server=(localdb)\\MSSQLLocalDB;Database=ApexDb;Trusted_Connection=True;"
+    "AutenticacaoApexDb": "Server=(localdb)\\MSSQLLocalDB;Database=AutenticacaoApexDb;Trusted_Connection=True;"
   },
   "JwtSettings": {
     "SecretKey": "vEiRo8MjEZ6cJDr3NoazQslwBnNdbspqes3MG6gkZec="
