--- a/TransportApex/src/TransportApex.WebApi/Properties/launchSettings.json
+++ b/TransportApex/src/TransportApex.WebApi/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "TransportApex.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5112;http://localhost:5111",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -19,6 +20,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
