--- a/TransportApex/src/TransportApex.WebApi/appsettings.json
+++ b/TransportApex/src/TransportApex.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApexDb": "Server=(localdb)\\MSSQLLocalDB;Database=ApexDb;Trusted_Connection=True;"
+    "TransportApexDb": "Server=(localdb)\\MSSQLLocalDB;Database=TransportApexDb;Trusted_Connection=True;"
   },
   "JwtSettings": {
     "SecretKey": "vEiRo8MjEZ6cJDr3NoazQslwBnNdbspqes3MG6gkZec="
