--- a/TransportApex/tests/TransportApex.Domain.UnitTests/TransportApex.Domain.UnitTests.csproj
+++ b/TransportApex/tests/TransportApex.Domain.UnitTests/TransportApex.Domain.UnitTests.csproj
@@ -8,7 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="MSTest" Version="4.0.0-preview.25465.3" />
+    <PackageReference Include="MSTest.TestAdapter" Version="4.0.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\TransportApex.Domain\TransportApex.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
