--- a/TransportApex/tests/TransportApex.Infrastructure.IntegrationTests/TransportApex.Infrastructure.IntegrationTests.csproj
+++ b/TransportApex/tests/TransportApex.Infrastructure.IntegrationTests/TransportApex.Infrastructure.IntegrationTests.csproj
@@ -8,7 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="MSTest" Version="4.0.0-preview.25465.3" />
+    <PackageReference Include="MSTest.TestAdapter" Version="4.0.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\TransportApex.Application\TransportApex.Application.csproj" />
+    <ProjectReference Include="..\..\src\TransportApex.Infrastructure\TransportApex.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
