Pequenos ajustes. - Criacao automatica de banco somente em ambiente de desenvolvimento - Pacotes sem uso nos projetos removidos - AuthService injetado na camada correta - A Injeção dos 3 services de TransportApex estava duplicada em duas camadas

--- a/TransportApex/src/TransportApex.Infrastructure/TransportApex.Infrastructure.csproj
+++ b/TransportApex/src/TransportApex.Infrastructure/TransportApex.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.17.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.10" />
@@ -20,10 +26,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TransportApex.Application\TransportApex.Application.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
